--- a/NeuroHome/src/SASS/_variables.scss
+++ b/NeuroHome/src/SASS/_variables.scss
@@ -12,7 +12,7 @@
   --text-color-2: hsl(240, 7%, 11%);
   --text-color-accent: hsl(0, 0%, 100%);
   --accent-color: hsl(36, 95%, 46%);
-  --accent-color-2: hsl(0, 0%, 89%);
+  --accent-color-2: hsla(0, 0%, 0%, 0.185);
   --card-bg: hsla(0, 0%, 7%, 0.425);
   --border-color: hsla(240, 1%, 85%, 0.6);
   --link-color: hsl(36, 95%, 46%);
